--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -9,6 +9,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="0dp"
+        android:layout_alignParentTop="true"
         >
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar_main"
@@ -18,10 +21,37 @@
             app:popupTheme="@style/AppTheme.PopupOverlay"
             />
     </android.support.design.widget.AppBarLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Name: "
+        android:id="@+id/textView.name.static"
+        android:textStyle="bold"
+        android:layout_marginLeft="20dp"
+        android:layout_below="@+id/appbar_main"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="20dp"
+        />
+
     <ListView
         android:id="@+id/listView_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         style="@style/AppTheme"
-        />
-</LinearLayout>
+        android:layout_marginLeft="0dp"
+        android:layout_below="@+id/textView.name.static"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="20dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Small Text"
+        android:id="@+id/textView.name.mainactivity"
+        android:layout_above="@+id/listView_main"
+        android:layout_toEndOf="@+id/textView.name.static" />
+
+</RelativeLayout>
