--- a/app/src/main/res/layout/listitem_postitions_main.xml
+++ b/app/src/main/res/layout/listitem_postitions_main.xml
@@ -8,17 +8,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Medium Text"
+        android:text="Username"
         android:id="@+id/textView.medium.listitem.main"
+        android:layout_marginLeft="10dp"
         android:layout_centerVertical="true"
-        android:layout_alignParentStart="true" />
+        android:layout_toEndOf="@+id/imageButton.listitem.main" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Small Text"
-        android:id="@+id/textView.small.listitem.main"
-        android:layout_below="@+id/textView.medium.listitem.main"
-        android:layout_alignStart="@+id/textView.medium.listitem.main" />
+    <ImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/imageButton.listitem.main"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true"
+        android:src="@mipmap/account_circle"
+
+        />
+
 </RelativeLayout>
