--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -69,5 +69,13 @@
         android:layout_gravity="center"
         />
 </FrameLayout>
-
+<com.github.clans.fab.FloatingActionButton
+    android:id="@+id/floating_refresh"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_alignParentBottom="true"
+    android:layout_alignParentRight="true"
+    android:src="@mipmap/autorenew"
+    android:layout_margin="12dp"
+    />
 </RelativeLayout>
